--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,93 @@
     <string name="weight">Weight</string>
     <string name="cm">cm</string>
     <string name="kg">kg</string>
+
+    <!-- Goal Display -->
+    <string name="daily_wellness_goals">Daily Wellness Goals</string>
+    <string name="goal_validity_indicator">Goal validity indicator</string>
+    <string name="goal_freshness_indicator">Goal freshness indicator</string>
+    <string name="steps_icon">Steps icon</string>
+    <string name="steps">Steps</string>
+    <string name="calories_icon">Calories icon</string>
+    <string name="calories">Calories</string>
+    <string name="heart_points_icon">Heart points icon</string>
+    <string name="heart_points">Heart Points</string>
+    <string name="calculated_from_who_standards">Calculated from WHO standards</string>
+    <string name="tap_to_learn_more">Tap to learn more</string>
+    <string name="recalculate_goals">Recalculate Goals</string>
+    <string name="goals_updated">Goals updated successfully</string>
+    <string name="goals_calculation_failed">Failed to calculate goals</string>
+    <string name="retry">Retry</string>
+    <string name="who_logo">WHO logo</string>
+    <string name="more_info">More info</string>
+    <string name="loading_icon">Loading icon</string>
+    <string name="dismiss">Dismiss</string>
+    <string name="goal_changes">Goal changes</string>
+    
+    <!-- Missing strings from layout files -->
+    <string name="error_icon">Error icon</string>
+    <string name="try_again">Try Again</string>
+    <string name="goals_icon">Goals icon</string>
+    <string name="goal_status_indicator">Goal status indicator</string>
+    <string name="expand_collapse">Expand/Collapse</string>
+    <string name="calculation_source_icon">Calculation source icon</string>
+    <string name="learn_more">Learn More</string>
+    <string name="recalculate">Recalculate</string>
+    <string name="no_goals_icon">No goals icon</string>
+    <string name="calculate_my_goals">Calculate My Goals</string>
+    
+    <!-- Goal explanation dialog strings -->
+    <string name="goal_calculation_icon">Goal calculation icon</string>
+    <string name="steps_goal_label">Steps Goal</string>
+    <string name="calories_goal_label">Calories Goal</string>
+    <string name="heart_points_goal_label">Heart Points Goal</string>
+    <string name="visit_who_website">Visit WHO Website</string>
+    <string name="personal_factor_icon">Personal factor icon</string>
+    
+    <!-- Additional missing strings -->
+    <string name="steps_goal_format">%,d steps</string>
+    <string name="calories_goal_format">%,d calories</string>
+    <string name="heart_points_goal_format">%d heart points</string>
+    <string name="last_updated_format">Last updated: %s</string>
+    <string name="calculating">Calculating...</string>
+    <string name="setting_up_your_goals">Setting up your goals</string>
+    <string name="goals_unavailable">Goals unavailable</string>
+    <string name="error">Error</string>
+    <string name="no_goals_set">No goals set</string>
+    <string name="not_calculated">Not calculated</string>
+    <string name="complete_profile_for_goals">Complete your profile to get personalized goals</string>
+    <string name="recalculating_goals">Recalculating your goals...</string>
+    <string name="goals_updated_successfully">Your goals have been updated successfully!</string>
+    <string name="goal_change_format" formatted="false">%s: %s → %s (%+s)</string>
+    <string name="got_it">Got it</string>
+    <string name="how_your_goals_are_calculated">How Your Goals Are Calculated</string>
+    <string name="goal_explanation_introduction">Your wellness goals are personalized based on WHO guidelines and your profile. Here\'s how we calculate each goal:</string>
+    <string name="steps_goal_explanation_title">Steps Goal</string>
+    <string name="calories_goal_explanation_title">Calories Goal</string>
+    <string name="heart_points_goal_explanation_title">Heart Points Goal</string>
+    <string name="your_personal_factors">Your Personal Factors</string>
+    <string name="personal_factors_description">These personal factors from your profile influence your goal calculations:</string>
+    <string name="who_sources_title">WHO Sources</string>
+    <string name="who_sources_description">Our calculations are based on these World Health Organization guidelines:</string>
+    <string name="who_guidelines_last_updated">WHO Guidelines 2020</string>
+    <string name="goal_explanation_not_available">Goal explanation not available</string>
+    <string name="goal_explanation_dialog_title">Goal Explanation</string>
+    <string name="last_calculated_format">Last calculated: %s</string>
+    <string name="no_goals_calculated">No Goals Calculated</string>
+    <string name="complete_profile_to_calculate_goals">Complete your profile information to get personalized wellness goals based on WHO standards.</string>
+    <string name="goals_section_header_description">Daily wellness goals section</string>
+    <string name="steps_goal_description">Daily steps goal</string>
+    <string name="calories_goal_description">Daily calories goal</string>
+    <string name="heart_points_goal_description">Daily heart points goal</string>
+    <string name="goals_valid">Goals are valid</string>
+    <string name="goals_need_review">Goals need review</string>
+    <string name="goals_up_to_date">Goals are up to date</string>
+    <string name="goals_need_update">Goals need update</string>
+    <string name="goal_card_accessibility_description">Goal display card</string>
+    <string name="who_standard_description">Based on WHO standards</string>
+    <string name="fallback_default_description">Using fallback defaults</string>
+    <string name="user_adjusted_description">User adjusted goals</string>
+    <string name="needs_update">Needs update</string>
+    <string name="profile_goals_accessibility_description">Profile goals section</string>
+    <string name="goal_source_info_description">Goal source information</string>
 </resources>
