--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,29 +69,97 @@
     <string name="wellness_journey_starts">Your wellness journey starts now. Let\'s make every day count!</string>
     <string name="enter_vibe_health">Enter Vibe Health</string>
 
-    <!-- Onboarding Validation Errors -->
-    <string name="error_name_required">Name is required</string>
-    <string name="error_name_too_short">Name must be at least 2 characters</string>
-    <string name="error_name_too_long">Name must be less than 50 characters</string>
-    <string name="error_birthday_required">Birthday is required</string>
-    <string name="error_birthday_future">Birthday cannot be in the future</string>
-    <string name="error_birthday_invalid_age">Please enter a valid birth date</string>
-    <string name="error_height_required">Height is required</string>
-    <string name="error_height_invalid">Please enter a valid height</string>
-    <string name="error_weight_required">Weight is required</string>
-    <string name="error_weight_invalid">Please enter a valid weight</string>
-    <string name="error_gender_required">Please select a gender option</string>
-
-    <!-- Content Descriptions for Onboarding -->
-    <string name="welcome_illustration">Welcome illustration</string>
+    <!-- Goal Display -->
+    <string name="daily_wellness_goals">Daily Wellness Goals</string>
+    <string name="steps">Steps</string>
+    <string name="calories">Calories</string>
+    <string name="heart_points">Heart Points</string>
+    <string name="calculated_from_who_standards">Calculated from WHO standards</string>
+    <string name="recalculate_goals">Recalculate Goals</string>
+    <string name="goals_updated">Goals updated successfully</string>
+    <string name="goals_calculation_failed">Failed to calculate goals</string>
+    <string name="retry">Try Again</string>
+    <string name="calculating">Calculating...</string>
+    <string name="goals_unavailable">Goals unavailable</string>
+    <string name="goals_valid">Goals valid</string>
+    <string name="complete_setup">Complete Setup</string>
+    <string name="complete_profile_setup">Complete Profile Setup</string>
+    <string name="complete_profile_to_see_goals">Complete your profile to see personalized goals</string>
+    
+    <!-- Dashboard specific strings -->
+    <string name="triple_ring_progress_description">Triple ring progress indicator showing steps, calories, and heart points</string>
+    <string name="goals_calculated_who_standards">Default goals for health benefits</string>
+    
+    <!-- Enhanced Accessibility Strings -->
+    <string name="accessibility_view_detailed_progress">View detailed progress breakdown</string>
+    <string name="accessibility_progress_indicator">Progress indicator showing daily wellness goals</string>
+    <string name="accessibility_progress_excellent">Excellent progress</string>
+    <string name="accessibility_progress_good">Good progress</string>
+    <string name="accessibility_progress_moderate">Moderate progress</string>
+    <string name="accessibility_progress_low">Low progress</string>
+    <string name="accessibility_progress_just_started">Just getting started</string>
+    
+    <string name="accessibility_view_details">View %1$s details</string>
+    <string name="accessibility_progress_card">Progress card</string>
+    <string name="accessibility_goal_achieved">Goal achieved</string>
+    <string name="accessibility_almost_there">Almost there</string>
+    <string name="accessibility_good_progress">Good progress</string>
+    <string name="accessibility_halfway_there">Halfway there</string>
+    <string name="accessibility_getting_started">Getting started</string>
+    <string name="accessibility_just_beginning">Just beginning</string>
+    
+    <string name="accessibility_ring_overview">Dashboard showing %1$d percent overall progress</string>
+    <string name="accessibility_ring_detail">%1$s: %2$d out of %3$d, %4$d percent complete</string>
+    <string name="accessibility_card_description">%1$s progress: %2$d out of %3$d, %4$d percent complete. Status: %5$s</string>
+    
+    <string name="accessibility_progress_updated">%1$s progress updated to %2$d percent</string>
+    <string name="accessibility_goal_achieved_announcement">Congratulations! You achieved your %1$s goal</string>
+    
+    <!-- Icons and UI Elements -->
+    <string name="error_icon">Error icon</string>
+    <string name="error_icon_description">Error icon</string>
+    <string name="setup_goals_icon_description">Setup goals icon</string>
+    <string name="goal_card_accessibility_description">Goal progress card</string>
+    <string name="steps_icon">Steps icon</string>
+    
+    <!-- Additional missing strings -->
+    <string name="refresh_data">Refresh data</string>
+    <string name="goal_validity_indicator">Goal validity indicator</string>
+    <string name="goal_freshness_indicator">Goal freshness indicator</string>
+    <string name="calories_icon">Calories icon</string>
+    <string name="heart_points_icon">Heart points icon</string>
+    <string name="who_logo">WHO logo</string>
+    <string name="more_info">More info</string>
+    <string name="loading_icon">Loading icon</string>
+    <string name="success_icon">Success icon</string>
+    <string name="dismiss">Dismiss</string>
+    <string name="goal_changes">Goal changes</string>
+    <string name="try_again">Try Again</string>
+    <string name="goals_icon">Goals icon</string>
+    <string name="goal_status_indicator">Goal status indicator</string>
+    <string name="expand_collapse">Expand/Collapse</string>
+    <string name="calculation_source_icon">Calculation source icon</string>
+    <string name="learn_more">Learn More</string>
+    <string name="recalculate">Recalculate</string>
+    <string name="no_goals_icon">No goals icon</string>
+    <string name="calculate_my_goals">Calculate My Goals</string>
+    <string name="goal_calculation_icon">Goal calculation icon</string>
+    <string name="steps_goal_label">Steps Goal</string>
+    <string name="calories_goal_label">Calories Goal</string>
+    <string name="heart_points_goal_label">Heart Points Goal</string>
+    <string name="visit_who_website">Visit WHO Website</string>
     <string name="success_checkmark">Success checkmark</string>
-    <string name="loading_animation">Loading animation</string>
-    <string name="progress_indicator">Progress indicator</string>
     <string name="back_button">Back</string>
     <string name="date_picker_button">Select birthday</string>
-    <string name="unit_system_toggle">Unit system selection</string>
+    <string name="physical_measurements">Physical measurements</string>
+    <string name="height">Height</string>
+    <string name="weight">Weight</string>
+    <string name="cm">cm</string>
+    <string name="kg">kg</string>
+    <string name="welcome_illustration">Welcome illustration</string>
+    <string name="personal_factor_icon">Personal factor icon</string>
     
-    <!-- Enhanced Error Messages for Onboarding -->
+    <!-- Additional missing strings for Kotlin code -->
     <string name="error_network_offline">You\'re offline. Please check your internet connection and try again.</string>
     <string name="error_network_timeout">Connection timed out. Please try again.</string>
     <string name="error_storage_failed">Unable to save your information. Please try again.</string>
@@ -103,75 +171,30 @@
     <string name="error_firebase_general">Unable to connect to our servers. Please try again.</string>
     <string name="error_unknown_onboarding">Something went wrong. Please try again or contact support.</string>
     
-    <!-- Missing strings for new layouts -->
-    <string name="success_icon">Success icon</string>
-    <string name="setup_complete">Setup Complete!</string>
-    <string name="ready_to_start_journey">You\'re all set! Ready to start your wellness journey.</string>
-    <string name="your_profile_summary">Your Profile Summary</string>
-    <string name="start_wellness_journey">Start Your Wellness Journey</string>
-    <string name="physical_measurements">Physical measurements</string>
-    <string name="height">Height</string>
-    <string name="weight">Weight</string>
-    <string name="cm">cm</string>
-    <string name="kg">kg</string>
-
-    <!-- Goal Display -->
-    <string name="daily_wellness_goals">Daily Wellness Goals</string>
-    <string name="goal_validity_indicator">Goal validity indicator</string>
-    <string name="goal_freshness_indicator">Goal freshness indicator</string>
-    <string name="steps_icon">Steps icon</string>
-    <string name="steps">Steps</string>
-    <string name="calories_icon">Calories icon</string>
-    <string name="calories">Calories</string>
-    <string name="heart_points_icon">Heart points icon</string>
-    <string name="heart_points">Heart Points</string>
-    <string name="calculated_from_who_standards">Calculated from WHO standards</string>
-    <string name="tap_to_learn_more">Tap to learn more</string>
-    <string name="recalculate_goals">Recalculate Goals</string>
-    <string name="goals_updated">Goals updated successfully</string>
-    <string name="goals_calculation_failed">Failed to calculate goals</string>
-    <string name="retry">Retry</string>
-    <string name="who_logo">WHO logo</string>
-    <string name="more_info">More info</string>
-    <string name="loading_icon">Loading icon</string>
-    <string name="dismiss">Dismiss</string>
-    <string name="goal_changes">Goal changes</string>
-    
-    <!-- Missing strings from layout files -->
-    <string name="error_icon">Error icon</string>
-    <string name="try_again">Try Again</string>
-    <string name="goals_icon">Goals icon</string>
-    <string name="goal_status_indicator">Goal status indicator</string>
-    <string name="expand_collapse">Expand/Collapse</string>
-    <string name="calculation_source_icon">Calculation source icon</string>
-    <string name="learn_more">Learn More</string>
-    <string name="recalculate">Recalculate</string>
-    <string name="no_goals_icon">No goals icon</string>
-    <string name="calculate_my_goals">Calculate My Goals</string>
-    
-    <!-- Goal explanation dialog strings -->
-    <string name="goal_calculation_icon">Goal calculation icon</string>
-    <string name="steps_goal_label">Steps Goal</string>
-    <string name="calories_goal_label">Calories Goal</string>
-    <string name="heart_points_goal_label">Heart Points Goal</string>
-    <string name="visit_who_website">Visit WHO Website</string>
-    <string name="personal_factor_icon">Personal factor icon</string>
-    
-    <!-- Additional missing strings -->
     <string name="steps_goal_format">%,d steps</string>
     <string name="calories_goal_format">%,d calories</string>
     <string name="heart_points_goal_format">%d heart points</string>
     <string name="last_updated_format">Last updated: %s</string>
-    <string name="calculating">Calculating...</string>
     <string name="setting_up_your_goals">Setting up your goals</string>
-    <string name="goals_unavailable">Goals unavailable</string>
     <string name="error">Error</string>
     <string name="no_goals_set">No goals set</string>
     <string name="not_calculated">Not calculated</string>
     <string name="complete_profile_for_goals">Complete your profile to get personalized goals</string>
+    <string name="steps_goal_description">Daily steps goal</string>
+    <string name="calories_goal_description">Daily calories goal</string>
+    <string name="heart_points_goal_description">Daily heart points goal</string>
+    <string name="goal_source_info_description">Goal source information</string>
+    <string name="goals_need_review">Goals need review</string>
+    <string name="goals_up_to_date">Goals are up to date</string>
+    <string name="goals_need_update">Goals need update</string>
+    <string name="who_standard_description">Based on WHO standards</string>
+    <string name="fallback_default_description">Using fallback defaults</string>
+    <string name="user_adjusted_description">User adjusted goals</string>
+    
     <string name="recalculating_goals">Recalculating your goals...</string>
     <string name="goals_updated_successfully">Your goals have been updated successfully!</string>
     <string name="goal_change_format" formatted="false">%s: %s → %s (%+s)</string>
+    
     <string name="got_it">Got it</string>
     <string name="how_your_goals_are_calculated">How Your Goals Are Calculated</string>
     <string name="goal_explanation_introduction">Your wellness goals are personalized based on WHO guidelines and your profile. Here\'s how we calculate each goal:</string>
@@ -185,32 +208,18 @@
     <string name="who_guidelines_last_updated">WHO Guidelines 2020</string>
     <string name="goal_explanation_not_available">Goal explanation not available</string>
     <string name="goal_explanation_dialog_title">Goal Explanation</string>
+    
+    <string name="error_name_required">Name is required</string>
+    <string name="error_name_too_short">Name must be at least 2 characters</string>
+    <string name="error_name_too_long">Name must be less than 50 characters</string>
+    <string name="error_height_required">Height is required</string>
+    <string name="error_weight_required">Weight is required</string>
+    
     <string name="last_calculated_format">Last calculated: %s</string>
     <string name="no_goals_calculated">No Goals Calculated</string>
     <string name="complete_profile_to_calculate_goals">Complete your profile information to get personalized wellness goals based on WHO standards.</string>
     <string name="goals_section_header_description">Daily wellness goals section</string>
-    <string name="steps_goal_description">Daily steps goal</string>
-    <string name="calories_goal_description">Daily calories goal</string>
-    <string name="heart_points_goal_description">Daily heart points goal</string>
-    <string name="goals_valid">Goals are valid</string>
-    <string name="goals_need_review">Goals need review</string>
-    <string name="goals_up_to_date">Goals are up to date</string>
-    <string name="goals_need_update">Goals need update</string>
-    <string name="goal_card_accessibility_description">Goal display card</string>
-    <string name="who_standard_description">Based on WHO standards</string>
-    <string name="fallback_default_description">Using fallback defaults</string>
-    <string name="user_adjusted_description">User adjusted goals</string>
     <string name="needs_update">Needs update</string>
     <string name="profile_goals_accessibility_description">Profile goals section</string>
-    <string name="goal_source_info_description">Goal source information</string>
     
-    <!-- Dashboard strings -->
-    <string name="triple_ring_progress_description">Daily wellness progress rings showing steps, calories, and heart points</string>
-    <string name="goals_calculated_who_standards">Goals calculated based on WHO standards</string>
-    <string name="error_icon_description">Error icon</string>
-    <string name="setup_goals_icon_description">Setup goals icon</string>
-    <string name="complete_profile_setup">Complete Profile Setup</string>
-    <string name="complete_profile_to_see_goals">Complete your profile to see personalized wellness goals</string>
-    <string name="complete_setup">Complete Setup</string>
-    <string name="refresh_data">Refresh data</string>
 </resources>
